# lighting

./: .clippy.toml  .gitignore  .taurignore  Cargo.toml  LICENSE-MIT  rust-toolchain.toml
.config/: .git-commit-template
docs/: learn.md
lighting/: Cargo.toml
lighting-backend/: Cargo.toml  Tauri.toml
lighting-frontend/: .leptosfmt.toml  Cargo.toml  Trunk.toml  index.html
lighting-frontend/src/: main.rs  test_actions.rs  test_asyncload.rs  test_children.rs  test_effect.rs  test_forminput.rs  test_globalstate.rs  test_iteration.rs  test_progress.rs  test_router.rs  test_routerform.rs  test_suspense.rs  test_transition.rs  ui.rs
lighting/src/: main.rs
