[package]
name = "lighting"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = ""
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
